# bitcoin

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  autogen.sh  configure.ac  libnealcoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md
.tx/: config
build-aux/m4/: bitcoin_find_bdb48.m4  bitcoin_qt.m4  (+1 more)
contrib/: README.md  bitcoin-cli.bash-completion  bitcoin-qt.pro  bitcoin-tx.bash-completion  bitcoind.bash-completion  gitian-build.sh  tidy_datadir.sh
depends/: Makefile  README.md  description.md
doc/: Doxyfile  README.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.md  zmq.md
qa/: README.md
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  (+91 more)
src/bench/: .gitignore  Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_bitcoin.cpp  ccoins_caching.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  lockedpool.cpp  mempool_eviction.cpp  perf.cpp  perf.h  rollingbloom.cpp  verify_script.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: aes.cpp  aes.h  common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/crypto/ctaes/: README.md
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoin.cpp  bitcoin.qrc  bitcoin_locale.qrc  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  (+69 more)
src/qt/forms/: addressbookpage.ui  debugwindow.ui  helpmessagedialog.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/res/: bitcoin-qt-res.rc
src/qt/res/movies/: makespinner.sh
src/qt/test/: Makefile  compattests.cpp  compattests.h  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: bitcoinconsensus.cpp  bitcoinconsensus.h  interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_bitcoin_NativeSecp256k1.c  org_bitcoin_NativeSecp256k1.h  org_bitcoin_Secp256k1Context.c  org_bitcoin_Secp256k1Context.h
src/secp256k1/src/java/org/bitcoin/: NativeSecp256k1.java  NativeSecp256k1Test.java  NativeSecp256k1Util.java  Secp256k1Context.java
src/support/: cleanse.cpp  cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: DoS_tests.cpp  Makefile  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bctest.py  bip32_tests.cpp  bitcoin-util-test.py  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  raii_event_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  sanity_tests.cpp  (+23 more)
src/test/data/: README.md  bitcoin-util-test.json
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_escapes.h
src/wallet/: coincontrol.h  crypter.cpp  crypter.h  db.cpp  db.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: accounting_tests.cpp  crypto_tests.cpp  wallet_test_fixture.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+238 files in other folders)
